<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viotia"
    android:layout_margin="@dimen/cardview_compat_inset_shadow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:text="@string/first_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/enterFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/your_first_name"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/your_last_name"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/enterLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/your_first_name" />

    <Button
        android:id="@+id/done"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />

</LinearLayout>